--- a/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-2.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-2.mdx
@@ -33,7 +33,7 @@ tags:
 
 **Пригнуться и укрыться (особенность).** Когда это существо поражает цель атакой и имеет преимущество в броске атаки, оно наносит ПО + 2 дополнительных урона. 
 
-Nimble Reaction 
+**Проворная реакция (реакция, перезарядка 4-6).** Когда это существо становится единственной целью атаки в ближнем бою, оно может немедленно переместиться на свою скорость, не провоцируя атаки по возможности. Если в результате этого перемещения существо оказывается вне зоны досягаемости атакующего существа, оно избегает атаки. 
 
 **Удар в спину.** Если у вас есть преимущество при атаке, вы наносите дополнительный урон, равный вашему уровню.
 
@@ -51,7 +51,13 @@ Nimble Reaction
 
 **Исчезнуть.**	Вы можете потратить действие, чтобы стать невидимым до конца вашего следующего хода. Вы должны дождаться окончания действия этого эффекта, прежде чем сможете использовать его снова.
 
-**Скрытая атака (1/ход).** Существо наносит дополнительные 14 (4к6) урона, когда поражает цель атакой оружием и имеет преимущество при броске атаки, или когда цель находится в пределах 5 футов от союзника существа, который не дееспособен, и у существа нет помехи при броске атаки.		
+**Скрытая атака (1/ход).** Существо наносит дополнительные 14 (4к6) урона, когда поражает цель атакой оружием и имеет преимущество при броске атаки, или когда цель находится в пределах 5 футов от союзника существа, который не дееспособен, и у существа нет помехи при броске атаки.
+
+**Внезапная атака.** Если существо застигнут врасплох и поражает его атакой в первом раунде боя, цель получает дополнительно 7 (2d6) урона от этой атаки.	
+
+**Засада.** В первом раунде боя существо имеет преимущество при бросках атаки против любого существа, которое оно застигло врасплох.	
+
+**Финт (перезарядка 4-6).** Существо совершает финт по одной цели в 5 футах от существа, притворяясь что атака будет идти с одного направления и меняя направление атаки в последний момент. Цель должна успешно совершить спасбросок Мудрости КС 8+бонус атаки существа или следующая атака существа по этой цели будет совершаться с преимуществом.
 
 ## Артиллерия, он же снайпер
 
@@ -98,14 +104,14 @@ Nimble Reaction
 
 ## Атакующий
 
-***Всплеск действий (перезаряжается после короткого или длинного отдыха).*** существо может совершить дополнительное действие в свой ход.
+**Всплеск действий (перезаряжается после короткого или длинного отдыха).** существо может совершить дополнительное действие в свой ход.
 
-***Арканичесое заклинание (1/ход).*** существо может нанести дополнительные 7 (2к6) урона существу, по которому он попадает повреждающей атакой заклинанием, если цель находится в пределах 5 футов от союзника существа и этот союзник не дееспособен.
+**Арканичесое заклинание (1/ход).** существо может нанести дополнительные 7 (2к6) урона существу, по которому он попадает повреждающей атакой заклинанием, если цель находится в пределах 5 футов от союзника существа и этот союзник не дееспособен.
 
 ***Направленный удар (перезаряжается после короткого или длинного отдыха).*** Когда существо делает бросок атаки, он может воспользоваться своей реакцией, чтобы добавить бонус +10 к этому броску.
 
-***Улучшенный критический удар.*** Атаки оружием существа наносят критический удар при выпадении 19 или 20 на к20.
+**Улучшенный критический удар.** Атаки оружием существа наносят критический удар при выпадении 19 или 20 на к20.
 
-***Сотворение заклинаний.*** существо может добавить модификатор своей Заклинательной характеристики к урону, наносимому любым заклинанием.
+**Сотворение заклинаний.** существо может добавить модификатор своей Заклинательной характеристики к урону, наносимому любым заклинанием.
 
-***Боевая магия.*** Когда существо использует свое действие, чтобы сотворять заклинание, он может совершить одну атаку оружием в качестве бонусного действия.
+**Боевая магия.** Когда существо использует свое действие, чтобы сотворять заклинание, он может совершить одну атаку оружием в качестве бонусного действия.
