--- a/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-1.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-1.mdx
@@ -16,7 +16,7 @@ tags:
 - Атакующий Показатель Опасности (АПО), который де факто определяется средним уроном, которое существо наносит в течении 3х раундов сражения.
 - Защитный Показатель Опасности (ЗПО), который де факто характеризует эффективные хиты существа.
 
-## АПО и ЗПО по ролям монстров
+## АПО и ЗПО по ролям существоов
 
 Большинство  существ имеют по крайней мере немного больше атакующей силы, чем защитной. В этом есть смысл: слишком большая защита делает бой слишком вялым и скучным, а слишком малое нападение заставляет существа не чувствовать угрозы для партии.
 
@@ -33,7 +33,7 @@ tags:
 | Солдат | от 4 до 6 |
 | Атакующий | от 8 до 10 |
 
-Представим быстрые статистики монстров в DMG в виде набора математических формул. Обратите внимание, что эти формулы имеют некоторую свободу действий и немного менее точны, чем правила DMG.
+Представим быстрые статистики существоов в DMG в виде набора математических формул. Обратите внимание, что эти формулы имеют некоторую свободу действий и немного менее точны, чем правила DMG.
 
 Для целей этих формул рассматривайте дробные ПО как отрицательные целые числа: 1/2 равно 0, 1/4 равно -1, 1/8 равно -2, а 0 равно -3.
 
@@ -53,7 +53,7 @@ tags:
 
 ### Существенная информация
 
-Чтобы сделать этот перевод, мы можем понять, что большинство особенностей либо увеличивают эффективный бонус атаки монстра, либо его эффективный класс доспехов. В свою очередь, в DMG говорится, что если эффективный КЗ или бонус атаки существа на 2 пункта выше (или ниже), то его ЗПО или АПО (соответственно) становится на 1 пункт выше (или ниже). Другими словами, особенности вроде Устойчивости к магии, добавляющие +2 к эффективному КЗ монстра, напрямую увеличивают его ЗПО на 1. Мы можем обобщить эту важную статистику следующим образом:
+Чтобы сделать этот перевод, мы можем понять, что большинство особенностей либо увеличивают эффективный бонус атаки существоа, либо его эффективный класс доспехов. В свою очередь, в DMG говорится, что если эффективный КЗ или бонус атаки существа на 2 пункта выше (или ниже), то его ЗПО или АПО (соответственно) становится на 1 пункт выше (или ниже). Другими словами, особенности вроде Устойчивости к магии, добавляющие +2 к эффективному КЗ существоа, напрямую увеличивают его ЗПО на 1. Мы можем обобщить эту важную статистику следующим образом:
 
 ##### Основные статистические данные
 | Название | Влияние на рейтинг вызовов |
@@ -65,9 +65,9 @@ tags:
 
 ### Состояние
 
-Как уже говорилось ранее, WotC часто рассматривает состояния как нанесение "виртуального урона" монстру. Поскольку урон линейно зависит от ПО, а состояния одинаково актуальны на всех уровнях, мы можем сделать еще один шаг вперед, переведя этот "виртуальный урон" в приращения ПО существа.
+Как уже говорилось ранее, WotC часто рассматривает состояния как нанесение "виртуального урона" существоу. Поскольку урон линейно зависит от ПО, а состояния одинаково актуальны на всех уровнях, мы можем сделать еще один шаг вперед, переведя этот "виртуальный урон" в приращения ПО существа.
 
-Состояния, облегчающие атаку существа (например, ошеломлен), увеличивают АПО существа. Состояния, которые только затрудняют атаку существа (например, отравление), увеличивают ЗПО существа. Оба эффекта получаются путем сравнения заклинаний, которые их накладывают (например, испуг или паралич), с эквивалентными заклинаниями того же уровня (например, *щит веры* или *опаляющий луч*) или с эквивалентными эффектами на одном монстре, который может накладывать такие состояния (например, лучи глаз смотрящего).
+Состояния, облегчающие атаку существа (например, ошеломлен), увеличивают АПО существа. Состояния, которые только затрудняют атаку существа (например, отравление), увеличивают ЗПО существа. Оба эффекта получаются путем сравнения заклинаний, которые их накладывают (например, испуг или паралич), с эквивалентными заклинаниями того же уровня (например, *щит веры* или *опаляющий луч*) или с эквивалентными эффектами на одном существое, который может накладывать такие состояния (например, лучи глаз смотрящего).
 
 Предположим, что каждое из приведенных ниже состояний направлено только на одно существо и может быть наложено один раз в раунд. Если состояние накладывается в области действия, можно предположить, что оно будет действовать на двух существ, что позволит вам удвоить эффект на ПО, указанный ниже. Если состояние не указано, значит, его влияние на ПО пренебрежимо мало или не стоит определять его количественно.
 
@@ -131,65 +131,49 @@ tags:
 
 ## **Громила**
 
-***Браулер.*** Монстр может использовать свое бонусное действие, чтобы попытаться схватить или толкнуть существо, находящееся в пределах его досягаемости.
+**Браулер.** существо может использовать свое бонусное действие, чтобы попытаться схватить или толкнуть существо, находящееся в пределах его досягаемости.
 
-***Брутальная выносливость.*** Каждый раз, когда монстр делает Спасбросок, он может бросить к6 и добавить результат к сумме Спасбросков.
+**Брутальная выносливость.** Каждый раз, когда существо делает Спасбросок, он может бросить к6 и добавить результат к сумме Спасбросков.
 
-***Улучшенная атака.*** Монстр может заменить любую свою атаку нестандартной попыткой ударить или бросить предмет, находящийся в пределах его досягаемости. Нормальная и дальняя дистанции атаки определяются в зависимости от размера монстра, а кость урона атаки на одну кость меньше, чем у обычной атаки ближнего боя, которую он использует в свой ход (например, если большинство его атак имеют кость 2d6, то кость этой атаки будет 2d4).
+**Улучшенная атака.** существо может заменить любую свою атаку нестандартной попыткой ударить или бросить предмет, находящийся в пределах его досягаемости. Нормальная и дальняя дистанции атаки определяются в зависимости от размера существоа, а кость урона атаки на одну кость меньше, чем у обычной атаки ближнего боя, которую он использует в свой ход (например, если большинство его атак имеют кость 2d6, то кость этой атаки будет 2d4).
 
-***Shrug it Off.*** Монстр может использовать свою реакцию, чтобы уменьшить вдвое урон, получаемый от атаки, которая попадает по нему. Монстр должен видеть атакующего.
+**Shrug it Off.** существо может использовать свою реакцию, чтобы уменьшить вдвое урон, получаемый от атаки, которая попадает по нему. существо должен видеть атакующего.
 
-***Выживший.*** Монстр восстанавливает 10 хитов в начале своего хода, если у него есть хотя бы 1 хит-пойнт, но меньше половины максимума хитов.
+**Выживший.** существо восстанавливает 10 хитов в начале своего хода, если у него есть хотя бы 1 хит-пойнт, но меньше половины максимума хитов.
 
-***Непоколебимый.*** Реакцией монстра на эффект, который может сдвинуть его с места, сбить с ног или наложить оба эффекта, является выбор не быть ни сдвинутым, ни сбитым с ног.
+**Непоколебимый.** Реакцией существоа на эффект, который может сдвинуть его с места, сбить с ног или наложить оба эффекта, является выбор не быть ни сдвинутым, ни сбитым с ног.
 
+**Оппортунист (особенность).** Это существо может совершить атаку по возможности, когда любое существо движется в пределах его досягаемости, даже если это движение обычно не вызывает атаку по возможности.  
 
-Оппортунист ( особенность). Это существо может совершить атаку по возможности, когда любое существо движется в пределах его досягаемости, даже если это движение обычно не вызывает атаку по возможности.  
+**Нападение над защитой (бонусное действие).** До конца своего хода это существо наносит дополнительное ПО урона при атаках, но снижает свой КЗ на 2. 
 
-Нападение над защитой (бонусное действие). До конца своего хода это существо наносит дополнительное ПО урона при атаках, но снижает свой КЗ на 2. 
+**Крепкий (Х).** Существо получает дополнительно Х хитов за каждую кость хитов существа.
 
-
-
-
-
-
-## Атакующий
-
-Агрессивный, Кровавое бешенство, Боевое преимущество и Безрассудство - все эти характеристики подходят для нападающих. Кроме того, для усиления нападающих рассмотрите любую из следующих характеристик.
-
-***Action Surge (перезаряжается после короткого или длинного отдыха).*** Монстр может совершить дополнительное действие в свой ход.
-
-***Арканичесое заклинание (1/ход).*** Монстр может нанести дополнительные 7 (2d6) урона существу, по которому он попадает повреждающей атакой заклинанием, если цель находится в пределах 5 футов от союзника монстра и этот союзник не дееспособен.
-
-***Направленный удар (перезаряжается после короткого или длинного отдыха).*** Когда монстр делает бросок атаки, он может воспользоваться своей реакцией, чтобы добавить бонус +10 к этому броску.
-
-***Улучшенный критический удар.*** Атаки оружием монстра наносят критический удар при выпадении 19 или 20 очков на d20.
-
-***Сотворение заклинаний.***Монстр может добавить модификатор своей Заклинательной характеристики к урону, наносимому любым заклинанием.
-
-***Боевая магия.*** Когда монстр использует свое действие, чтобы сотворять заклинание, он может совершить одну атаку оружием в качестве бонусного действия.
 
 ## **Налетчик**
 
-***Ассасин.*** Во время своего первого хода монстр имеет преимущество при бросках атаки против любого существа, которое еще не совершило ход. Любое попадание монстра по застигнутому врасплох существу считается критическим.
+**Ассасин.** Во время своего первого хода существо имеет преимущество при бросках атаки против любого существа, которое еще не совершило ход. Любое попадание существоа по застигнутому врасплох существу считается критическим.
 
-***Lightfooted.*** Монстр может совершить действие Dash или Отход в качестве бонусного действия в каждый из своих ходов.
+**Легконогий.** существо может совершить действие Рывок или Отход в качестве бонусного действия в каждый из своих ходов.
 
-***Затаившийся в тени.*** Находясь в темноте, монстр невидим для любого существа, которое может увидеть его в этой темноте с помощью темного зрения.
+**Затаившийся в тени.** Находясь в темноте, существо невидимо для любого существа, которое может увидеть его в этой темноте с помощью темного зрения.
 
-***Мобильный.*** Когда монстр совершает атаку в ближнем бою против существа, он не провоцирует атаки по возможности от этого существа до конца хода, независимо от того, попадает он или нет.
+**Мобильный.** Когда существо совершает атаку в ближнем бою против существа, он не провоцирует атаки по возможности от этого существа до конца хода, независимо от того, попадает он или нет.
 
-***Покрытие на себя (действие).*** Монстр магически становится невидимым до начала вашего следующего хода. Невидимость заканчивается, если монстр делает бросок атаки, наносит урон или сотворяет заклинание.
+**Покрытие на себя (действие).** существо магически становится невидимым до начала его следующего хода. Невидимость заканчивается, если существо делает бросок атаки, наносит урон или сотворяет заклинание.
 
-***Проворный (особенность).*** Это существо игнорирует труднопроходимую местность. 
+**Проворный (особенность).** Это существо игнорирует труднопроходимую местность. 
 
-***Осторожные шаги (бонусное действие).*** Движение этого существа не провоцирует атаки по возможности до конца его хода. 
+**Осторожные шаги (бонусное действие).** Движение этого существа не провоцирует атаки по возможности до конца его хода. 
 
-***Нокаут (особенность).*** Когда это существо поражает цель атакой, оно может выбрать, чтобы оттолкнуть ее на 5 футов от себя. Если это существо имеет ПО 4 или выше, цель также должна преуспеть в спасброске Силы (КС = 10 + 1/2 ПО) или быть сбитой с ног. 
+**Нокаут (особенность).** Когда это существо поражает цель атакой, оно может выбрать, чтобы оттолкнуть ее на 5 футов от себя. Если это существо имеет ПО 4 или выше, цель также должна преуспеть в спасброске Силы (КС = 10 + 1/2 ПО) или быть сбитой с ног. 
 
-***Быстрый шаг (реакция).*** Когда это существо совершает атаку с дистанции, оно может сначала переместиться на 5 футов, не провоцируя атаки по возможности. 
+**Быстрый шаг (реакция).** Когда это существо совершает атаку с дистанции, оно может сначала переместиться на 5 футов, не провоцируя атаки по возможности. 
 
-***Реакцией на промах существа при атаке в ближнем бою против монстра или если враждебное существо заканчивает свой ход в радиусе 5 футов от монстра, монстр может передвигаться на половину своей скорости, не провоцируя атаки по возможности.
+**Уклонение.** Если существо подвергается эффекту, который позволяет ему сделать спасбросок Ловкости, чтобы получить только половину урона, оно не получает никакого урона, если спасбросок удался, и только половину урона, если он провален.	
+
+
+**Налетчик.**  Реакцией при промах по существу при атаке в ближнем бою или если враждебное существо заканчивает свой ход в радиусе 5 футов от существа, существо может передвигаться на половину своей скорости, не провоцируя атаки по возможности.
 
 
 В следующей статье мы рассмотрим другие роли и характерные для них особенности и действия.
