--- a/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-1.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-1.mdx
@@ -131,13 +131,28 @@ tags:
 
 ## **Громила**
 
-**Браулер.** существо может использовать свое бонусное действие, чтобы попытаться схватить или толкнуть существо, находящееся в пределах его досягаемости.
+**Бонус атаки:** уменьшить на 2
 
-**Брутальная выносливость.** Каждый раз, когда существо делает Спасбросок, он может бросить к6 и добавить результат к сумме Спасбросков.
+или
 
-**Улучшенная атака.** существо может заменить любую свою атаку нестандартной попыткой ударить или бросить предмет, находящийся в пределах его досягаемости. Нормальная и дальняя дистанции атаки определяются в зависимости от размера существоа, а кость урона атаки на одну кость меньше, чем у обычной атаки ближнего боя, которую он использует в свой ход (например, если большинство его атак имеют кость 2d6, то кость этой атаки будет 2d4).
+**Хиты:** уменьшить на 10%
+**Бонус атаки:** уменьшить на 1
 
-**Shrug it Off.** существо может использовать свою реакцию, чтобы уменьшить вдвое урон, получаемый от атаки, которая попадает по нему. существо должен видеть атакующего.
+или
+
+**КЗ:** уменьшить на 2
+
+и
+
+**Урон:** увеличить на 2 за каждую кость урона
+
+**Борец.** существо может использовать свое бонусное действие, чтобы попытаться схватить или толкнуть существо, находящееся в пределах его досягаемости.
+
+**Брутальная выносливость.** Каждый раз, когда существо делает Спасбросок, он может бросить к6 и добавить результат к результату Спасброска.
+
+**Улучшенная атака.** существо может заменить любую свою атаку нестандартной попыткой ударить или бросить предмет, находящийся в пределах его досягаемости. Нормальная и дальняя дистанции атаки определяются в зависимости от размера существоа, а кость урона ль ьаклй атаки на одну кость меньше, чем у обычной атаки ближнего боя, которую он использует в свой ход (например, если большинство его атак имеют кость 2к6, то кость этой атаки будет 2к4).
+
+**Отмахнуться.** существо может использовать свою реакцию, чтобы уменьшить вдвое урон, получаемый от атаки, которая попадает по нему. существо должен видеть атакующего.
 
 **Выживший.** существо восстанавливает 10 хитов в начале своего хода, если у него есть хотя бы 1 хит-пойнт, но меньше половины максимума хитов.
 
@@ -151,6 +166,16 @@ tags:
 
 
 ## **Налетчик**
+
+**КЗ:** уменьшить на 2
+
+или
+
+**Хиты:** уменьшить на 20%
+
+и
+
+**Скорость:** каждая скорость существа увеличивается на 20
 
 **Ассасин.** Во время своего первого хода существо имеет преимущество при бросках атаки против любого существа, которое еще не совершило ход. Любое попадание существоа по застигнутому врасплох существу считается критическим.
 
@@ -171,7 +196,6 @@ tags:
 **Быстрый шаг (реакция).** Когда это существо совершает атаку с дистанции, оно может сначала переместиться на 5 футов, не провоцируя атаки по возможности. 
 
 **Уклонение.** Если существо подвергается эффекту, который позволяет ему сделать спасбросок Ловкости, чтобы получить только половину урона, оно не получает никакого урона, если спасбросок удался, и только половину урона, если он провален.	
-
 
 **Налетчик.**  Реакцией при промах по существу при атаке в ближнем бою или если враждебное существо заканчивает свой ход в радиусе 5 футов от существа, существо может передвигаться на половину своей скорости, не провоцируя атаки по возможности.
 
