--- a/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-1.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-1.mdx
@@ -24,6 +24,7 @@ tags:
 
 Учитывая это, ниже приведена таблица с рекомендуемым диапазоном числовых различий между АПО и ЗПО существа в зависимости от его роли.
 
+##### Статистика АПО и ЗПО по ролям существ
 | Роль | АПО - ЗПО |
 |------------|-----------|
 | Громила | от 2 до 4 |
@@ -128,6 +129,11 @@ tags:
 | Накладывает помеху на спасброски | 1 раунд | АПО +1 |
 | Мгновенное снижение до 0 хитов | Мгновенно | Эквивалентно трехкратному урону самой сильной атаки существа |
 | Позволяет союзнику совершить атаку | Мгновенно | Эквивалентно урону самой слабой атаки существа |
+
+
+## Шаблоны существ в зависимости от ролей
+
+При использовании этих шаблонов - совершите необходимые изменения в статблоке с учетом "Статистика АПО и ЗПО по ролям существ" и выберите подходящие для существа особенности и действия из приведенных в описаниях роли.
 
 ## **Громила**
 
