--- a/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-2.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-2.mdx
@@ -15,6 +15,10 @@ tags:
 Как уже упоминалось в предыдущих статьях -  стратегия существа определяет его особенности и связана с ролью, выполняемой на поле сражения. Отсюда явным образом следует что роли имеют набор характерных особенностей существа и его способностей и действий, которые наиболее характерны для этой роли.
 
 
+## Шаблоны существ в зависимости от ролей
+
+При использовании этих шаблонов - совершите необходимые изменения в статблоке с учетом "Статистика АПО и ЗПО по ролям существ" и выберите подходящие для существа особенности и действия из приведенных в описаниях роли.
+
 ## **Засадник**, он же **скрытень**.
 
 **Хиты:** уменьшить на 20% 
@@ -115,3 +119,19 @@ tags:
 **Сотворение заклинаний.** существо может добавить модификатор своей Заклинательной характеристики к урону, наносимому любым заклинанием.
 
 **Боевая магия.** Когда существо использует свое действие, чтобы сотворять заклинание, он может совершить одну атаку оружием в качестве бонусного действия.
+
+**Кровавая ярость**	Когда вы окровавлены, вы получаете -2 КЗ и +2 атаки.
+
+**Рассечение**	Раз в ход, нанося урон существу, вы можете нанести вдвое меньший урон цели, которая находится (а) в пределах 5 футов от вашей цели и (б) в пределах вашей досягаемости.
+
+**Удар смерти**	Когда вы уменьшаете количество хитов существа до 0, оно немедленно получает один неудачный спасбросок от смерти.
+
+**Казнь**	Когда вы попадаете в существо, у которого 50% или меньше хитов, вы наносите дополнительный урон, равный вашему уровню.
+
+**Нажать на атаку**	У вас есть преимущество, когда вы делаете бросок атаки против окровавленного существа.
+
+**Дикая атака**	Один раз за ход, когда вы бьете существо атакой, вы можете нанести дополнительный урон, равный вашему уровню.
+
+**Ошеломленный удар**	При броске 19-20 ваши атаки засчитываются как критическое попадание. Кроме того, когда вы критически поражаете существо, оно должно совершить спасбросок Телосложения или будет ошеломлено до начала вашего следующего хода.
+
+**Месть**	Когда вы попадаете в существо, которое атаковало вас после окончания вашего последнего хода, вы можете нанести дополнительный урон, равный вашему уровню.
