--- a/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-3.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-3.mdx
@@ -10,113 +10,104 @@ tags:
   - "Командир"
   - "Контроллер"
   - "Поддержка"
+  - "Солдат"
 ---
 
 Как уже упоминалось в предыдущих статьях -  стратегия существа определяет его особенности и связана с ролью, выполняемой на поле сражения. Отсюда явным образом следует что роли имеют набор характерных особенностей существа и его способностей и действий, которые наиболее характерны для этой роли.
 
+## Шаблоны существ в зависимости от ролей
 
+При использовании этих шаблонов - совершите необходимые изменения в статблоке с учетом "Статистика АПО и ЗПО по ролям существ" и выберите подходящие для существа особенности и действия из приведенных в описаниях роли.
 
+## **Солдат**
 
-## Атакующий
+**Контратака**	Когда существо промахивается по вам атакой оружием ближнего боя, вы можете потратить свою реакцию, чтобы совершить одну атаку против этого существа.
 
-Агрессивный, Кровавое бешенство, Боевое преимущество и Безрассудство - все эти характеристики подходят для нападающих. Кроме того, для усиления нападающих рассмотрите любую из следующих характеристик.
+**Не смотрите по сторонам**	Когда вы атакуете существо, вы можете пометить его. Помеченное существо получает -2 к любому броску атаки, в котором не участвуете вы. Одновременно у вас может быть одна активная метка, и метки не складываются.
 
-***Action Surge (перезаряжается после короткого или длинного отдыха).*** Монстр может совершить дополнительное действие в свой ход.
+**Прочный**	Когда вы завершаете длинный отдых, вы получаете временные хит-пойнты, равные половине вашего максимального количества хит-пойнтов.
 
-***Арканичесое заклинание (1/ход).*** Монстр может нанести дополнительные 7 (2d6) урона существу, по которому он попадает повреждающей атакой заклинанием, если цель находится в пределах 5 футов от союзника монстра и этот союзник не дееспособен.
+**Get Behind Me**	Союзники в радиусе 5 футов от вас считаются находящимися в укрытии на три четверти.
 
-***Направленный удар (перезаряжается после короткого или длинного отдыха).*** Когда монстр делает бросок атаки, он может воспользоваться своей реакцией, чтобы добавить бонус +10 к этому броску.
+**Got Your Back**	Если вы не сдерживаетесь и стоите рядом с существом, которое является целью атаки (не включающей вас), вы можете потратить свою реакцию, чтобы перенаправить атаку на себя.
 
-***Улучшенный критический удар.*** Атаки оружием монстра наносят критический удар при выпадении 19 или 20 очков на d20.
+**Тяжелая оборона**	Вы можете потратить бонусное действие, чтобы получить +2 КЗ до начала вашего следующего хода.
 
-***Сотворение заклинаний.***Монстр может добавить модификатор своей Заклинательной характеристики к урону, наносимому любым заклинанием.
+**Shield Wall**	Если вы не сдерживаете себя и стоите рядом с существом, вы можете потратить бонусное действие, чтобы получить полное укрытие этого существа до начала вашего следующего хода. Вы должны оставаться рядом с существом, чтобы поддерживать это укрытие.
 
-***Боевая магия.*** Когда монстр использует свое действие, чтобы сотворять заклинание, он может совершить одну атаку оружием в качестве бонусного действия.
+**Ты не можешь уйти**	Существа всегда провоцируют ваши атаки по возможности, даже если они совершают действие "Отход", прежде чем покинуть зону вашей досягаемости. Когда вы поражаете существо атакой по возможности, скорость этого существа становится равной 0 до конца хода.
+
 
 ## **Контролер**
 
+**Аура эрозии разума.** Любое враждебное существо, которое начинает свой ход в радиусе 30 футов от монстра, должно сделать Спасбросок интеллекта (КС зависит от интеллекта). При неудачном спасброске существо получает помеху при всех спасбросках мудрости и харизмы до начала следующего хода монстра.
 
-***Аура эрозии разума.*** Любое враждебное существо, которое начинает свой ход в радиусе 30 футов от монстра, должно сделать Спасбросок интеллекта (КС зависит от интеллекта). При неудачном спасброске существо получает помеху при всех спасбросках мудрости и харизмы до начала следующего хода монстра.
+**Сломленная воля (действие).** Монстр выбирает одно существо, с которым он может общаться посредством телепатии. Цель должна сделать спасбросок мудрости (КС зависит от интеллекта). Если спасбросок провален, монстр выбирает движение и действие цели в свой следующий ход. Существо невосприимчиво к этой способности, если оно невосприимчиво к очарованию.
 
-***Сломленная воля (действие).*** Монстр выбирает одно существо, с которым он может общаться посредством телепатии. Цель должна сделать спасбросок мудрости (КС зависит от интеллекта). Если спасбросок провален, монстр выбирает движение и действие цели в свой следующий ход. Существо невосприимчиво к этой способности, если оно невосприимчиво к очарованию.
+**Захватывающее присутствие.** Любое существо, которое начинает свой ход в радиусе 30 футов от монстра, должно сделать спасбросок мудрости (КС основан на харизме). Если спасбросок провален, существо становится очарованным монстром на 1 минуту или до тех пор, пока оно не удалится от него на расстояние более 30 футов. При успешном спасброске существо становится невосприимчивым к пленяющему присутствию монстра на 24 часа.
 
-***Захватывающее присутствие.*** Любое существо, которое начинает свой ход в радиусе 30 футов от монстра, должно сделать спасбросок мудрости (КС основан на харизме). Если спасбросок провален, существо становится очарованным монстром на 1 минуту или до тех пор, пока оно не удалится от него на расстояние более 30 футов. При успешном спасброске существо становится невосприимчивым к пленяющему присутствию монстра на 24 часа.
+**Ограниченный полет.** Монстр может использовать бонусное действие, чтобы получить скорость полета, равную его скорости ходьбы, до конца хода.
 
-***Ограниченный полет.*** Монстр может использовать бонусное действие, чтобы получить скорость полета, равную его скорости ходьбы, до конца хода.
+**Перенаправленная атака.** Реакцией на атаку существа, которое монстр может видеть, является выбор союзника в радиусе 5 футов от него. Два существа меняются местами, и выбранный союзник становится целью.
 
-***Перенаправленная атака.*** Реакцией на атаку существа, которое монстр может видеть, является выбор союзника в радиусе 5 футов от него. Два существа меняются местами, и выбранный союзник становится целью.
-
-***Ошеломляющий взгляд (действие).*** Монстр выбирает одно существо, которое он может видеть в радиусе 30 футов от себя. Цель должна успешно совершить спасбросок Мудрости (КС зависит от Харизмы) или быть ошеломлена до конца своего следующего хода.
+**Ошеломляющий взгляд (действие).** Монстр выбирает одно существо, которое он может видеть в радиусе 30 футов от себя. Цель должна успешно совершить спасбросок Мудрости (КС зависит от Харизмы) или быть ошеломлена до конца своего следующего хода.
 
 
-Контролирующие атаки (особенность). Когда это существо поражает цель атакой, на нее накладывается одно из следующих состояний, в зависимости от концепции существа: ослеплен, зачарован, испуг,  
+**Контролирующие атаки (особенность).** Когда это существо поражает цель атакой, на нее накладывается одно из следующих состояний, в зависимости от концепции существа: ослеплен, зачарован, испуг,  
 Захват, отравление, Распластанность или Обездвиживание. Состояние длится до конца следующего хода цели.  
 
-Контролирующие заклинания (особенность). Выберите до двух из следующих заклинаний: слепота/глухота, повеление, опутывание, смазка, порыв ветра, жуткий смех, удержание человека, левитация, луч ослабления, молчание, внушение или паутина. Это существо может сотворять любое из выбранных заклинаний как действие. Если у этого существа еще нет КС спасброска от заклинаний, то КС спасброска для этих заклинаний равен 10 + 1/2 ПО. Выбранные заклинания не могут быть изменены для этого существа. 
+**Контролирующие заклинания (особенность).** Выберите до двух из следующих заклинаний: слепота/глухота, повеление, опутывание, смазка, порыв ветра, жуткий смех, удержание человека, левитация, луч ослабления, молчание, внушение или паутина. Это существо может сотворять любое из выбранных заклинаний как действие. Если у этого существа еще нет КС спасброска от заклинаний, то КС спасброска для этих заклинаний равен 10 + 1/2 ПО. Выбранные заклинания не могут быть изменены для этого существа. 
 
-Усовершенствованное контролирующее заклинание (особенность). Выберите одно заклинание из из особенности "Контролирующие заклинания", которое может сотворять это существо. Существо получает одно из следующих преимуществ: 
+**Усовершенствованное контролирующее заклинание (особенность).**Выберите одно заклинание из из особенности "Контролирующие заклинания", которое может сотворять это существо. Существо получает одно из следующих преимуществ: 
 - Заклинание можно сотворять как бонусное действие.  
 - Заклинание можно сотворять в качестве реакции на получение урона  
 от врага. 
 - Если заклинание обычно направлено на одно существо, то вместо этого оно может на двух существ в пределах своей обычной зоны действия.  
 
+**Притяжение**	Раз в ход, когда вы поражаете существо атакой, вы можете притянуть его к себе на расстояние до 15 футов.
+
+**Ослепляющий удар**	Один раз за ход, когда вы поражаете существо атакой, оно ослепляется до начала вашего следующего хода.
+
+**Блокиратор**	Вы можете потратить бонусное действие, чтобы создать область сложной местности размером 15 х 15 футов в радиусе 60 футов от вас. Область действует до начала вашего следующего хода.
+
+**Калечащий удар**	Один раз за ход, поразив существо атакой, вы можете снизить его скорость до 0 футов до конца его следующего хода.
+
+**Отвлекающий удар**	Один раз за ход, поразив существо атакой, вы можете дать преимущество при следующем броске атаки против этого существа.
+
+**Встать в позицию**	Раз в ход, поразив существо атакой, вы можете позволить союзнику потратить свою реакцию и переместиться на половину своей скорости (не провоцируя атаки по возможности со стороны цели).
+
+**Нокбэк**	Один раз за ход, поразив существо атакой, вы можете отбросить его на расстояние до 15 футов от себя.
+
+**Уход в сторон**у	Один раз за ход, поразив существо атакой, вы можете переместить себя и это существо на 5 футов в любом направлении. Это перемещение не провоцирует атаки по возможности.
 
 ## **Поддержка**
 
+**Броненосец**	Союзники в радиусе 10 футов от вас уменьшают получаемый от атак урон вдвое.
+
+**Командир**	Вы можете потратить бонусное действие, чтобы приказать союзнику совершить атаку по выбранной вами цели.
+
+**Свирепость**	Союзники в радиусе 10 футов от вас получают бонус к урону, равный вашему уровню.
+
+**Наставление**	Союзники в радиусе 10 футов от вас имеют преимущество при бросках атаки.
+
+**Целитель**	Вы можете потратить бонусное действие, чтобы дать временные хиты, равные вашему уровню, существу в радиусе 30 футов.
+
+**Не под моим присмотром**	Если существо, которое вы можете видеть, уменьшилось бы до 0 хитов, вы можете потратить свою реакцию, чтобы уменьшить его до 1 хита. Кроме того, существо получает временные хиты, равные вашему уровню.
+
+**Защита**	Союзники в радиусе 10 футов от вас получают +2 КЗ.
+Клич сплочения	Один раз за ход, когда вы поражаете цель атакой, вы можете снять текущее состояние с союзника, которого вы видите.
 
 
 ## **Лидер**, он же **командир**
 
-### Лидеры
+**Вдохновение на поле боя (действие).** Монстр выбирает до трех союзников, которых он может видеть в радиусе 30 футов от себя. До конца следующего хода монстра каждая цель может добавить к4 к своим броскам атаки и спасброскам.
 
-В моем документе [https://www.gmbinder.com/share/-LtrZrYqZl6TBt8gu9lt](Warlord Collection) приведен список возможных характеристик, которыми может быть наделен монстр типа "Лидер", некоторые из них перепечатаны ниже. Хотя все сгенерированные монстры в этом документе обладают легендарными действиями, имейте в виду, что они не являются обязательным условием для всех лидеров.
+**Бульвар (3/день).** Реакцией является то, что если союзник в радиусе 30 футов от военачальника проваливает спасбросок, союзник может перебросить спасбросок.
 
-***Вдохновение на поле боя (действие).*** Монстр выбирает до трех союзников, которых он может видеть в радиусе 30 футов от себя. До конца следующего хода монстра каждая цель может добавить к4 к своим броскам атаки и спасброскам.
+**Бонусным действием монстр выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит и слышит монстра, он может сделать одну атаку оружием в качестве реакции и получает преимущество при броске атаки.
 
-***Бульвар (3/день).*** Реакцией является то, что если союзник в радиусе 30 футов от военачальника проваливает спасбросок, союзник может перебросить спасбросок.
+**Лидерство (действие; перезаряжается после короткого или длинного отдыха).** В течение 1 минуты монстр может произносить особую команду или предупреждение, когда невраждебное существо, которое он видит в радиусе 30 футов от него, делает бросок атаки или спасбросок. Существо может добавить К4 к своему броску, если оно слышит и понимает монстра. Существо может одновременно использовать только один кубик Лидерства. Эффект заканчивается, если монстр недееспособен.
 
-***Бонусным действием монстр выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит и слышит монстра, он может сделать одну атаку оружием в качестве реакции и получает преимущество при броске атаки.
+**Бонусным действием монстр выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит или слышит монстра, он получает временные хиты, равные рейтингу вызова монстра плюс его модификатор харизмы. Если союзник в данный момент очарован или испуган, эти эффекты немедленно прекращаются на него самого.
 
-***Лидерство (действие; перезаряжается после короткого или длинного отдыха).*** В течение 1 минуты монстр может произносить особую команду или предупреждение, когда невраждебное существо, которое он видит в радиусе 30 футов от него, делает бросок атаки или спасбросок. Существо может добавить К4 к своему броску, если оно слышит и понимает монстра. Существо может одновременно использовать только один кубик Лидерства. Эффект заканчивается, если монстр недееспособен.
-
-***Бонусным действием монстр выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит или слышит монстра, он получает временные хиты, равные рейтингу вызова монстра плюс его модификатор харизмы. Если союзник в данный момент очарован или испуган, эти эффекты немедленно прекращаются на него самого.
-
-***Тактический маневр.*** В качестве Бонусного действием монстр выбирает одного монстра, которого он видит в радиусе 60 футов от себя. Если союзник видит и слышит монстра, он может использовать свою реакцию, чтобы переместиться на половину своей скорости, не провоцируя атаки по возможности.
-
-## Создание боя с боссом
-
-В D&D и фантастике в целом концепция эпической схватки с могущественным монстром-боссом универсальна. Прежде чем создавать совершенно новые механики для боссов-монстров, давайте сначала обсудим уже существующие варианты и расширим их по мере необходимости.
-
-### Реакции
-
-Реакции - это базовая возможность действия, доступная всем существам, позволяющая им создавать какой-либо эффект в ответ на определенный триггер. По умолчанию единственной реакцией монстра по желанию является атака по возможности. Однако очень легко взять существующие реакции из официальных монстров (например, Parry) и добавить их в пользовательского монстра.
-
-Рассмотрите возможность использования следующих особенностей для повышения способности монстра к использованию реакций.
-
-***Быстрые рефлексы.*** Когда монстр использует реакцию, он также может перемещаться на половину своей скорости, не провоцируя атаки по возможности.
-
-***Легендарная реакция.*** Монстр может потратить одно легендарное действие на реакцию, даже если он уже использовал свою обычную реакцию.
-
-***Ограниченная реакция.*** Монстр может использовать две реакции за раунд в бою.
-
-***Реакция.*** Монстр может использовать одну реакцию на каждый ход боя.
-
-### Легендарные Устойчивости
-
-Легендарная Устойчивость дается многим легендарным монстрам, чтобы предотвратить их захват способностью "спаси или отсоси", такой как заклинание *держать монстра* или способность монаха "Ошеломляющий удар". С одной стороны, эта механика может предотвратить преждевременное завершение боя с боссом из-за неудачного спасброска против мощного эффекта. С другой стороны, некоторые DM считают эту механику скучной и/или несправедливой по отношению к игрокам. В таком случае рассмотрите следующие альтернативы:
-
-***Вырваться на свободу.*** Если монстр недееспособен в начале своего хода, эффект, вызвавший это состояние, немедленно заканчивается на монстре, и монстр получает урон, равный его рейтингу вызова.
-
-***Свобода действий.*** У монстра есть преимущество при спасбросках против эффектов, которые могли бы его обездвижить или лишить дееспособности.
-
-***Свобода передвижения.*** Монстр игнорирует труднопроходимую местность, а магические эффекты не могут уменьшить его скорость или обездвижить. Он может потратить 5 футов движения, чтобы освободиться от немагических ограничений или быть захваченным.
-
-***Неукротимый (3/день).*** Монстр может повторно выполнить неудачный Спасбросок. Он должен использовать новый бросок.
-
-***Легендарная прочность (1/ход).*** Монстр может выбрать уменьшение вдвое урона, получаемого от эффекта, который он может видеть.
-
-***Легендарная защита.*** Если монстр проваливает Спасбросок, он может потратить одно легендарное действие, чтобы добиться успеха.
-
-***Легендарная Устойчивость (1/раунд).*** Если монстр проваливает Спасбросок, он может выбрать вместо него Успех.
-
-***Непробиваемый (3/день).*** Если монстр недееспособен в начале своего хода, эффект, вызывающий это состояние, немедленно прекращается на монстре.
+**Тактический маневр.** В качестве Бонусного действием монстр выбирает одного монстра, которого он видит в радиусе 60 футов от себя. Если союзник видит и слышит монстра, он может использовать свою реакцию, чтобы переместиться на половину своей скорости, не провоцируя атаки по возможности.
