--- a/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-3.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-3.mdx
@@ -40,17 +40,17 @@ tags:
 
 ## **Контролер**
 
-**Аура эрозии разума.** Любое враждебное существо, которое начинает свой ход в радиусе 30 футов от монстра, должно сделать Спасбросок интеллекта (КС зависит от интеллекта). При неудачном спасброске существо получает помеху при всех спасбросках мудрости и харизмы до начала следующего хода монстра.
+**Аура эрозии разума.** Любое враждебное существо, которое начинает свой ход в радиусе 30 футов от Существа, должно сделать Спасбросок интеллекта (КС зависит от интеллекта). При неудачном спасброске существо получает помеху при всех спасбросках мудрости и харизмы до начала следующего хода Существа.
 
-**Сломленная воля (действие).** Монстр выбирает одно существо, с которым он может общаться посредством телепатии. Цель должна сделать спасбросок мудрости (КС зависит от интеллекта). Если спасбросок провален, монстр выбирает движение и действие цели в свой следующий ход. Существо невосприимчиво к этой способности, если оно невосприимчиво к очарованию.
+**Сломленная воля (действие).** Существо выбирает одно существо, с которым он может общаться посредством телепатии. Цель должна сделать спасбросок мудрости (КС зависит от интеллекта). Если спасбросок провален, Существо выбирает движение и действие цели в свой следующий ход. Существо невосприимчиво к этой способности, если оно невосприимчиво к очарованию.
 
-**Захватывающее присутствие.** Любое существо, которое начинает свой ход в радиусе 30 футов от монстра, должно сделать спасбросок мудрости (КС основан на харизме). Если спасбросок провален, существо становится очарованным монстром на 1 минуту или до тех пор, пока оно не удалится от него на расстояние более 30 футов. При успешном спасброске существо становится невосприимчивым к пленяющему присутствию монстра на 24 часа.
+**Захватывающее присутствие.** Любое существо, которое начинает свой ход в радиусе 30 футов от Существа, должно сделать спасбросок мудрости (КС основан на харизме). Если спасбросок провален, существо становится очарованным Существоом на 1 минуту или до тех пор, пока оно не удалится от него на расстояние более 30 футов. При успешном спасброске существо становится невосприимчивым к пленяющему присутствию Существа на 24 часа.
 
-**Ограниченный полет.** Монстр может использовать бонусное действие, чтобы получить скорость полета, равную его скорости ходьбы, до конца хода.
+**Ограниченный полет.** Существо может использовать бонусное действие, чтобы получить скорость полета, равную его скорости ходьбы, до конца хода.
 
-**Перенаправленная атака.** Реакцией на атаку существа, которое монстр может видеть, является выбор союзника в радиусе 5 футов от него. Два существа меняются местами, и выбранный союзник становится целью.
+**Перенаправленная атака.** Реакцией на атаку существа, которое Существо может видеть, является выбор союзника в радиусе 5 футов от него. Два существа меняются местами, и выбранный союзник становится целью.
 
-**Ошеломляющий взгляд (действие).** Монстр выбирает одно существо, которое он может видеть в радиусе 30 футов от себя. Цель должна успешно совершить спасбросок Мудрости (КС зависит от Харизмы) или быть ошеломлена до конца своего следующего хода.
+**Ошеломляющий взгляд (действие).** Существо выбирает одно существо, которое он может видеть в радиусе 30 футов от себя. Цель должна успешно совершить спасбросок Мудрости (КС зависит от Харизмы) или быть ошеломлена до конца своего следующего хода.
 
 
 **Контролирующие атаки (особенность).** Когда это существо поражает цель атакой, на нее накладывается одно из следующих состояний, в зависимости от концепции существа: ослеплен, зачарован, испуг,  
@@ -100,14 +100,43 @@ tags:
 
 ## **Лидер**, он же **командир**
 
-**Вдохновение на поле боя (действие).** Монстр выбирает до трех союзников, которых он может видеть в радиусе 30 футов от себя. До конца следующего хода монстра каждая цель может добавить к4 к своим броскам атаки и спасброскам.
+**Вдохновение на поле боя (действие).** Существо выбирает до трех союзников, которых он может видеть в радиусе 30 футов от себя. До конца следующего хода Существа каждая цель может добавить к4 к своим броскам атаки и спасброскам.
 
-**Бульвар (3/день).** Реакцией является то, что если союзник в радиусе 30 футов от военачальника проваливает спасбросок, союзник может перебросить спасбросок.
+**Оплот (3/день).** Когда союзник в радиусе 30 футов от военачальника проваливает Спасбросок, союзник может перебросить Спасбросок.
 
-**Бонусным действием монстр выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит и слышит монстра, он может сделать одну атаку оружием в качестве реакции и получает преимущество при броске атаки.
+**Приказ союзнику.** Бонусным действием Существо выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит и слышит Существа, он может сделать одну атаку оружием в качестве реакции и получает преимущество при броске атаки.
 
-**Лидерство (действие; перезаряжается после короткого или длинного отдыха).** В течение 1 минуты монстр может произносить особую команду или предупреждение, когда невраждебное существо, которое он видит в радиусе 30 футов от него, делает бросок атаки или спасбросок. Существо может добавить К4 к своему броску, если оно слышит и понимает монстра. Существо может одновременно использовать только один кубик Лидерства. Эффект заканчивается, если монстр недееспособен.
+**Лидерство (действие; перезаряжается после короткого или длинного отдыха).** В течение 1 минуты Существо может произносить особую команду или предупреждение, когда невраждебное существо, которое он видит в радиусе 30 футов от него, делает бросок атаки или спасбросок. Существо может добавить К4 к своему броску, если оно слышит и понимает Существа. Существо может одновременно использовать только один кубик Лидерства. Эффект заканчивается, если Существо недееспособен.
 
-**Бонусным действием монстр выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит или слышит монстра, он получает временные хиты, равные рейтингу вызова монстра плюс его модификатор харизмы. Если союзник в данный момент очарован или испуган, эти эффекты немедленно прекращаются на него самого.
+**Вдохновляющий клич.** Бонусным действием Существо выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит или слышит Существа, он получает временные хиты, равные рейтингу вызова Существа плюс его модификатор харизмы. Если союзник в данный момент очарован или испуган, эти эффекты немедленно прекращаются на него самого.
 
-**Тактический маневр.** В качестве Бонусного действием монстр выбирает одного монстра, которого он видит в радиусе 60 футов от себя. Если союзник видит и слышит монстра, он может использовать свою реакцию, чтобы переместиться на половину своей скорости, не провоцируя атаки по возможности.
+**Тактический маневр.** В качестве Бонусного действием Существо выбирает одного Существа, которого он видит в радиусе 60 футов от себя. Если союзник видит и слышит Существа, он может использовать свою реакцию, чтобы переместиться на половину своей скорости, не провоцируя атаки по возможности.
+
+**Усилитель.** Находясь в радиусе 30 футов от военачальника, любой его союзник совершает Спасброски с преимуществом, и этот союзник восстанавливает 1к6 хитов, когда начинает свой ход.
+
+**Храбрый.** У военачальника есть преимущество при спасбросках от испуга.
+
+**Вдохновляющее присутствие.** Пока военачальник дееспособен, любой союзник в радиусе 30 футов от военачальника не может быть напуган, и союзник получает временные хиты, равные модификатору харизмы военачальника, когда начинает свой ход там.
+
+**Мастер тактики.** Военачальник может выполнить действие "Помощь" в качестве бонусного действия.
+
+**Ралли.** Пока военачальник не дееспособен, каждый союзник военачальника в радиусе 30 футов от него не может быть очарован или испуган.
+
+**Тактическая дисциплина.** Военачальник имеет преимущество при всех проверках характеристик и спасбросках, сделанных во время боя.
+
+## Дополнительные особенности и действия
+
+### Реакции
+
+Реакции - это базовые действия, доступные всем существам, позволяющие им создавать тот или иной эффект в ответ на определенный триггер. По умолчанию единственной реакцией Существа по желанию является атака по возможности. Однако очень легко взять существующие реакции из официальных Существоов (например, Parry) и добавить их в пользовательского Существа.
+
+Рассмотрите возможность использования следующих особенностей, чтобы повысить способность Существа к реакциям.
+
+**Быстрые рефлексы.** Когда Существо пользуется реакцией, он также может перемещаться на половину своей скорости, не провоцируя атаки по возможности.
+
+**Легендарная реакция.** Существо может потратить одно легендарное действие на реакцию, даже если он уже использовал свою обычную реакцию.
+
+**Ограниченная реакция.** Существо может совершать две реакции за раунд в бою.
+
+**Реакция.** Существо может взять одну реакцию на каждый ход в бою.
+
